--- a/public_html/dashboard/tasks/index.html
+++ b/public_html/dashboard/tasks/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--
+        To-Do Tasks with Sharing - dashboard/tasks/
+        Author: Amirkhon Makhkamov
+        Description: Web-based platform designed to facilitate task
+                     management and collaboration among users.
+    -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -24,7 +31,7 @@
 </head>
 <body>
 
-<div class="container mt-5 pt-5">
+<div class="container mt-108">
     <div class="mb-4">
         <div class="d-flex justify-content-between">
             <div class="d-flex gap-2">
