--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!--
-        To-Do Tasks with Sharing
+        To-Do Tasks with Sharing - Home
         Author: Amirkhon Makhkamov
         Description: Web-based platform designed to facilitate task
                      management and collaboration among users.
@@ -70,8 +70,11 @@
                         </div>
                     </div>
 
-                    <p class="text-center mt-3">
-                        <a href="help.html" class="font-15">Help page</a>
+                    <p class="text-center mt-5">
+                        <a href="/help" class="font-15 btn btn-outline-primary d-inline-flex justify-content-center align-items-center">
+                            <i class="lni lni-question-mark-circle d-block me-1"></i>
+                            <span class="d-block">Help page</span>
+                        </a>
                     </p>
                 </div>
             </div>
