--- a/public_html/dashboard/index.html
+++ b/public_html/dashboard/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--
+        To-Do Tasks with Sharing - dashboard/
+        Author: Amirkhon Makhkamov
+        Description: Web-based platform designed to facilitate task
+                      management and collaboration among users.
+    -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -23,7 +30,7 @@
     <title>Dashboard | TODO Tasks</title>
 </head>
 <body>
-    <div class="container mt-5 pt-5">
+    <div class="container mt-108">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <ul class="nav nav-pills" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
@@ -61,7 +68,6 @@
             </div>
         </div>
     </div>
-
 
     <script src="/js/dashboard.js"></script>
     <script src="/js/tasks.js"></script>
