--- a/public_html/dashboard/tasks/create/index.html
+++ b/public_html/dashboard/tasks/create/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--
+        To-Do Tasks with Sharing - dashboard/tasks/create/
+        Author: Amirkhon Makhkamov
+        Description: Web-based platform designed to facilitate task
+                     management and collaboration among users.
+    -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -24,7 +31,7 @@
 </head>
 <body>
 
-    <div class="container mt-5 pt-5">
+    <div class="container mt-108">
         <div class="mb-4">
             <a href="/dashboard" class="btn btn-outline-primary d-inline-flex justify-content-center align-items-center">
                 <i class="lni lni-arrow-left d-block font-23"></i>
